[package]
name = "qemu_test_runner"
version = "0.1.0"
edition = "2021"
authors = ["Michał Smolarek <ms383396@students.mimuw.edu.pl>"]
description = "A test runner for students' solutions to the Operating Systems course assignments."
readme = "README.md"
repository = "https://github.com/Razz4780/qemu_test_runner"
license = "WTFPL"

[dependencies]
ssh2 = "0.9.3"
tokio = { version = "1.20.1", features = ["full"]}
tempfile = "3.3.0"
clap = { version = "3.2.16", features = ["derive"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.83"
log = "0.4.17"
env_logger = "0.9.0"
futures = "0.3.21"
tokio-stream = { version = "0.1.9", features = ["io-util"] }

[dev-dependencies]
test-case = "2.2.1"
